--- a/public/mainSession.html
+++ b/public/mainSession.html
@@ -19,25 +19,32 @@
   <body>
     <input type="checkbox" id="check">
     <label for="check">
-      <i class="fas fa-th-large" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i>
+      <!-- <i class="fas fa-th-large" id="btn"></i>
+      <i class="fas fa-times" id="cancel"></i> -->
+      <i class="" id="btn"></i>
+      <i class="" id="cancel"></i>
     </label>
     <div class="sidebar">
       <header>Sketcho</header>
       <ul>
-        <li><a href="index.html"><i class="fas fa-coffee"></i>Preparation room</a></li>
+        <!-- <li><a href="index.html"><i class="fas fa-coffee"></i>Preparation room</a></li>
         <li><a href="outfit.html"><i class="fas fa-theater-masks"></i>Outfit room</a></li>
         <li><a href="mainSession.html"><i class="fas fa-border-all"></i>Main Session</a></li>
         <li><a href="breakoutroom1.html"><i class="fas fa-comments"></i>breakout room1</a></li>
         <li><a href="breakoutroom2.html"><i class="fas fa-comments"></i>breakout room2</a></li>
         <li><a href="breakoutroom3.html"><i class="fas fa-comments"></i>breakout room3</a></li>
         <li><a href="relax.html"><i class="fas fa-umbrella-beach"></i>Room for refreshing</a></li>
-        <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
+        <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li> -->
+
+        <li><a href="index.html">Preparation room</a></li>
+        <li><a href="outfit.html">Outfit room</a></li>
+        <li><a href="mainSession.html">Main Session</a></li>
+        <li><a href="breakoutroom1.html">breakout room1</a></li>
+        <li><a href="breakoutroom2.html">breakout room2</a></li>
+        <li><a href="breakoutroom3.html">breakout room3</a></li>
+        <li><a href="relax.html">Room for refreshing</a></li>
+        <li><a href="bar.html">Party time</a></li>
       </ul>
-    </div>
-    <div id="video"> 
-      <!-- <iframe width="600" height="350" src="https://www.youtube.com/embed/_r0VX-aU_T8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-      <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPbQEVoDbtKdOeB_T5nrHuztlSvVeGJQGxz1pyAUTWEumAc87Ctky8HplMrjIE9Kn0XybEiF9_4bJi/embed?start=false&loop=false&delayms=3000" frameborder="0" width="560" height="315" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </body>
 </html>
