--- a/public/bar.html
+++ b/public/bar.html
@@ -19,10 +19,10 @@
   <body>
     <input type="checkbox" id="check">
     <label for="check">
-      <!-- <i class="fas fa-th-large" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i> -->
-      <i class="" id="btn"></i>
-      <i class="" id="cancel"></i>
+      <i class="fas fa-th-large" id="btn"></i>
+      <i class="fas fa-times" id="cancel"></i>
+      <!-- <i class="" id="btn"></i>
+      <i class="" id="cancel"></i> -->
     </label>
     <div class="sidebar">
       <header>Sketcho</header>
@@ -36,7 +36,7 @@
         <li><a href="relax.html"><i class="fas fa-umbrella-beach"></i>Room for refreshing</a></li>
         <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li> -->
 
-        <li><a href="index.html">Preparation room</a></li>
+        <li><a href="cafe.html">Preparation room</a></li>
         <li><a href="outfit.html">Outfit room</a></li>
         <li><a href="mainSession.html">Main Session</a></li>
         <li><a href="breakoutroom1.html">breakout room1</a></li>
