--- a/public/cafe.html
+++ b/public/cafe.html
@@ -3,17 +3,23 @@
   <head>
     <title>Sketcho Prototype</title>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
     <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
     <script type="text/javascript" src="https://p5livemedia.itp.io/p5livemedia.js"></script>
     <!-- <script type="text/javascript" src="https://p5livemedia.itp.io/socket.io.js"></script>     -->
-  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" ></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script> -->
+		<!-- <script type="text/javascript" src="https://p5live.itp.io/simplepeer.min.js"></script>
+	  <script type="text/javascript" src="https://p5live.itp.io/socket.io/socket.io.js"></script>
+		<script type="text/javascript" src="https://p5live.itp.io/p5live.js"></script>  -->
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <script src="3_mainSession.js"></script>
+    <script src="1_pre.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -46,7 +52,12 @@
         <li><a href="bar.html">Party time</a></li> -->
       </ul>
     </div>
-    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPbQEVoDbtKdOeB_T5nrHuztlSvVeGJQGxz1pyAUTWEumAc87Ctky8HplMrjIE9Kn0XybEiF9_4bJi/embed?start=false&loop=false&delayms=3000" id="myframe" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <div align="center">
+    <div class="music">
+      <audio controls>
+        <source src="music/cafe_music.mp3" type="audio/mpeg">
+      </audio>
     </div>
+   </div>
   </body>
 </html>
