--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <title>Sketcho Prototype</title>
     <script src="/socket.io/socket.io.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
@@ -19,45 +20,22 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <script src="1_pre.js"></script>
+    <script src="0_deomo.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
-    <input type="checkbox" id="check">
-    <label for="check">
-      <!-- <i class="fas fa-th-large" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i> -->
-      <i class="" id="btn"></i>
-      <i class="" id="cancel"></i>
-    </label>
-    <div class="sidebar">
-      <header>Sketcho</header>
-      <ul>
-        <!-- <li><a href="index.html"><i class="fas fa-coffee"></i>Preparation room</a></li>
-        <li><a href="outfit.html"><i class="fas fa-theater-masks"></i>Outfit room</a></li>
-        <li><a href="mainSession.html"><i class="fas fa-border-all"></i>Main Session</a></li>
-        <li><a href="breakoutroom1.html"><i class="fas fa-comments"></i>breakout room1</a></li>
-        <li><a href="breakoutroom2.html"><i class="fas fa-comments"></i>breakout room2</a></li>
-        <li><a href="breakoutroom3.html"><i class="fas fa-comments"></i>breakout room3</a></li>
-        <li><a href="relax.html"><i class="fas fa-umbrella-beach"></i>Room for refreshing</a></li>
-        <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li> -->
-
-        <li><a href="index.html">Preparation room</a></li>
-        <li><a href="outfit.html">Outfit room</a></li>
-        <li><a href="mainSession.html">Main Session</a></li>
-        <li><a href="breakoutroom1.html">breakout room1</a></li>
-        <li><a href="breakoutroom2.html">breakout room2</a></li>
-        <li><a href="breakoutroom3.html">breakout room3</a></li>
-        <li><a href="relax.html">Room for refreshing</a></li>
-        <li><a href="bar.html">Party time</a></li>
-      </ul>
+    <div style="text-align:center;">
+     <br>
+     <br> 
+    <div class = "Deomo">
+    <h1>Welcome! <br>
+        This is Sketcho App Deomo</h1>
+      </div>
+      <br>
+      <br>
+      <br>
+      <button class= "button button1"><a href="cafe.html">Start</a></button>
+      </div>
     </div>
-    <div align="center">
-    <div class="music">
-      <audio controls>
-        <source src="music/cafe_music.mp3" type="audio/mpeg">
-      </audio>
-    </div>
-   </div>
   </body>
 </html>
