--- a/public/outfit.html
+++ b/public/outfit.html
@@ -19,31 +19,31 @@
   <body>
     <input type="checkbox" id="check">
     <label for="check">
-      <!-- <i class="fas fa-th-large" id="btn"></i>
-      <i class="fas fa-times" id="cancel"></i> -->
-      <i class="" id="btn"></i>
-      <i class="" id="cancel"></i>
+      <i class="fas fa-th-large" id="btn"></i>
+      <i class="fas fa-times" id="cancel"></i>
+      <!-- <i class="" id="btn"></i>
+      <i class="" id="cancel"></i> -->
     </label>
     <div class="sidebar">
       <header>Sketcho</header>
       <ul>
-        <!-- <li><a href="index.html"><i class="fas fa-coffee"></i>Preparation room</a></li>
+        <li><a href="cafe.html"><i class="fas fa-coffee"></i>Preparation room</a></li>
         <li><a href="outfit.html"><i class="fas fa-theater-masks"></i>Outfit room</a></li>
         <li><a href="mainSession.html"><i class="fas fa-border-all"></i>Main Session</a></li>
         <li><a href="breakoutroom1.html"><i class="fas fa-comments"></i>breakout room1</a></li>
         <li><a href="breakoutroom2.html"><i class="fas fa-comments"></i>breakout room2</a></li>
         <li><a href="breakoutroom3.html"><i class="fas fa-comments"></i>breakout room3</a></li>
         <li><a href="relax.html"><i class="fas fa-umbrella-beach"></i>Room for refreshing</a></li>
-        <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li> -->
+        <li><a href="bar.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
 
-        <li><a href="index.html">Preparation room</a></li>
+        <!-- <li><a href="cafe.html">Preparation room</a></li>
         <li><a href="outfit.html">Outfit room</a></li>
         <li><a href="mainSession.html">Main Session</a></li>
         <li><a href="breakoutroom1.html">breakout room1</a></li>
         <li><a href="breakoutroom2.html">breakout room2</a></li>
         <li><a href="breakoutroom3.html">breakout room3</a></li>
         <li><a href="relax.html">Room for refreshing</a></li>
-        <li><a href="bar.html">Party time</a></li>
+        <li><a href="bar.html">Party time</a></li> -->
       </ul>
     </div>
     <!-- <div align="center">
