--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
      <br> 
     <div class = "Deomo">
     <h1>Welcome! <br>
-        This is Sketcho App Deomo</h1>
+        This is Sketcho App Demo</h1>
       </div>
       <br>
       <br>
