--- a/public/breakoutroom1.html
+++ b/public/breakoutroom1.html
@@ -19,11 +19,14 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
     <script src="4_breakoutroom1.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
+    <div id=miro1>
+      <iframe width="800" height="350" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-571,-288,1152,631" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+    </div>
     <input type="checkbox" id="check">
     <label for="check">
       <i class="fas fa-th-large" id="btn"></i>
@@ -52,9 +55,6 @@
         <li><a href="relax.html">Room for refreshing</a></li>
         <li><a href="bar.html">Party time</a></li> -->
       </ul>
-    </div>
-    <<div id=miro1>
-      <iframe width="800" height="350" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-571,-288,1152,631" frameBorder="0" scrolling="no" allowFullScreen></iframe>
     </div>
   </body>
 </html>
