--- a/public/relax.html
+++ b/public/relax.html
@@ -63,7 +63,10 @@
       </div>
     </div>
     <div id=miro2>
-      <iframe width="700" height="400" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-844,896,1368,661" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+      <iframe width="400" height="300" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-844,896,1368,661" frameBorder="0" scrolling="no" allowFullScreen></iframe>
+    </div>  
+    <div id=google>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYiG1-jPMORMtiOOWQQYOOj8tlWzJ7ykymtcIILtv7kv3wlw/viewform?embedded=true" width="400" height="300" frameborder="0" marginheight="0" marginwidth="0">로드 중…</iframe>
     </div>  
   </body>
 </html>
