--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
 
     <title>Sketcho Prototype</title>
-    <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.3/socket.io.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script> -->
     <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
     <script type="text/javascript" src="https://p5livemedia.itp.io/p5livemedia.js"></script>
     <!-- <script type="text/javascript" src="https://p5livemedia.itp.io/socket.io.js"></script>     -->
@@ -16,26 +17,25 @@
 	  <script type="text/javascript" src="https://p5live.itp.io/socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="https://p5live.itp.io/p5live.js"></script>  -->
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/home/style.css">
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/fontawesome.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="0_deomo.js"></script>
+    <script src="js/home/0_demo.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
     <div style="text-align:center;">
      <br>
      <br> 
-    <div class = "Deomo">
-    <h1>Welcome! <br>
-        This is Sketcho App Demo</h1>
-      </div>
-      <br>
-      <br>
-      <br>
-      <button class= "button button1"><a href="cafe.html">Start</a></button>
+      <div class = "Deomo">
+        <h1>Welcome! <br>
+          This is Sketcho App Demo</h1>
+        <br>
+        <br>
+        <input type ="text" id ="nickname" placeholder="nickname">
+        <br>
+        <button class= "button button1" id="button1"><a href="1_preparation.html">Start</a></button>
       </div>
     </div>
   </body>
