mute button text 바뀌는 기능 구현

--- a/public/1_preparation.html
+++ b/public/1_preparation.html
@@ -20,8 +20,9 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/1_preparation.js"></script>
     <meta charset="utf-8" />
+    <!-- favicon.ico 404 (Not Found) -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo="> 
   </head>
   <body>
     <input type="checkbox" id="check">
@@ -44,6 +45,8 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
   </body>
+  <script src="js/home/1_preparation.js"></script>
 </html>
