전체 페이지 mute기능 구현

--- a/public/4_mainSession.html
+++ b/public/4_mainSession.html
@@ -14,7 +14,6 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/4_mainSession.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -38,8 +37,10 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPbQEVoDbtKdOeB_T5nrHuztlSvVeGJQGxz1pyAUTWEumAc87Ctky8HplMrjIE9Kn0XybEiF9_4bJi/embed?start=false&loop=false&delayms=3000" id="myframe" frameborder="0" width="530" height="320" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </body>
+  <script src="js/home/4_mainSession.js"></script>
 </html>
