--- a/public/2_outfit.html
+++ b/public/2_outfit.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" type="text/css" href="./fontawesome/css/all.css">
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/2_outfit.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -37,6 +36,8 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
   </body>
+  <script src="js/home/2_outfit.js"></script>
 </html>
