--- a/public/7_breakoutroom3.html
+++ b/public/7_breakoutroom3.html
@@ -19,7 +19,6 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/7_breakoutroom3.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -46,6 +45,8 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
   </body>
+  <script src="js/home/7_breakoutroom3.js"></script>
 </html>
