--- a/public/8_party.html
+++ b/public/8_party.html
@@ -14,7 +14,6 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/8_party.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -38,9 +37,11 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
     <div id=bar>
     <iframe width="300" height="220" src="https://www.youtube.com/embed/_sI_Ps7JSEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </body>
+<script src="js/home/8_party.js"></script>
 </html>
