--- a/public/9_refreshroom.html
+++ b/public/9_refreshroom.html
@@ -15,7 +15,6 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <script src="js/home/9_refreshroom.js"></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -39,6 +38,7 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
+      <button id="mute">Mute</button>
     </div>
     <!-- <div id=miro2>
       <iframe width="400" height="300" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-844,896,1368,661" frameBorder="0" scrolling="no" allowFullScreen></iframe>
@@ -47,4 +47,5 @@
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYiG1-jPMORMtiOOWQQYOOj8tlWzJ7ykymtcIILtv7kv3wlw/viewform?embedded=true" width="400" height="300" frameborder="0" marginheight="0" marginwidth="0">로드 중…</iframe>
     </div>   -->
   </body>
+  <script src="js/home/9_refreshroom.js"></script>
 </html>
