favicon 에러, 400 에러 전체 수정

--- a/public/9_refreshroom.html
+++ b/public/9_refreshroom.html
@@ -3,7 +3,7 @@
   <head>
     <title>Sketcho Prototype</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script> -->
     <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
     <script type="text/javascript" src="https://p5livemedia.itp.io/p5livemedia.js"></script>
     <!-- <script type="text/javascript" src="https://p5livemedia.itp.io/socket.io.js"></script>     -->
@@ -15,7 +15,8 @@
     <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
     <script src="./fontawesome/js/all.js"></script>
     <!-- <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo="> 
   </head>
   <body>
     <input type="checkbox" id="check">
