--- a/public/1_preparation.html
+++ b/public/1_preparation.html
@@ -3,8 +3,8 @@
   <head>
     <title>Sketcho Prototype</title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script> -->
     <script type="text/javascript" src="https://p5livemedia.itp.io/simplepeer.min.js"></script>
     <script type="text/javascript" src="https://p5livemedia.itp.io/p5livemedia.js"></script>
     <!-- <script type="text/javascript" src="https://p5livemedia.itp.io/socket.io.js"></script>     -->
