--- a/public/4_mainSession.html
+++ b/public/4_mainSession.html
@@ -39,6 +39,7 @@
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
       <button id="mute">Mute</button>
+      <button id="camera">Turn Camera Off</button>
     </div>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPbQEVoDbtKdOeB_T5nrHuztlSvVeGJQGxz1pyAUTWEumAc87Ctky8HplMrjIE9Kn0XybEiF9_4bJi/embed?start=false&loop=false&delayms=3000" id="myframe" frameborder="0" width="530" height="320" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
