--- a/public/9_refreshroom.html
+++ b/public/9_refreshroom.html
@@ -40,6 +40,7 @@
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
       <button id="mute">Mute</button>
+      <button id="camera">Turn Camera Off</button>
     </div>
     <!-- <div id=miro2>
       <iframe width="400" height="300" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-844,896,1368,661" frameBorder="0" scrolling="no" allowFullScreen></iframe>
