--- a/public/2_outfit.html
+++ b/public/2_outfit.html
@@ -38,6 +38,7 @@
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
       <button id="mute">Mute</button>
+      <button id="camera">Turn Camera Off</button>
     </div>
   </body>
   <script src="js/home/2_outfit.js"></script>
