--- a/public/7_breakoutroom3.html
+++ b/public/7_breakoutroom3.html
@@ -47,6 +47,7 @@
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
       <button id="mute">Mute</button>
+      <button id="camera">Turn Camera Off</button>
     </div>
   </body>
   <script src="js/home/7_breakoutroom3.js"></script>
