--- a/public/8_party.html
+++ b/public/8_party.html
@@ -39,6 +39,7 @@
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
       <button id="mute">Mute</button>
+      <button id="camera">Turn Camera Off</button>
     </div>
     <div id=bar>
     <iframe width="300" height="220" src="https://www.youtube.com/embed/_sI_Ps7JSEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
