button icon change

--- a/public/1_preparation.html
+++ b/public/1_preparation.html
@@ -29,8 +29,6 @@
     <label for="check">
       <i class="fas fa-th-large" id="btn"></i>
       <i class="fas fa-times" id="cancel"></i>
-      <!-- <i class="" id="btn"></i>
-      <i class="" id="cancel"></i> -->
     </label>
     <div class="sidebar">
       <header>Sketcho</header>
@@ -45,10 +43,11 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
-      <button id="mute">Mute</button>
-      <button id="camera">Turn Camera Off</button>
-
     </div>
+    <div class="icon-bar">
+      <a href="#"><a button id="mute"><i class = "fas fa-microphone"></i></a>
+      <a href="#"><a button id="camera"><i class = "fas fa-video"></i></a> 
+  </div>
   </body>
   <script src="js/home/1_preparation.js"></script>
 </html>
