--- a/public/4_mainSession.html
+++ b/public/4_mainSession.html
@@ -38,9 +38,11 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
-      <button id="mute">Mute</button>
-      <button id="camera">Turn Camera Off</button>
     </div>
+    <div class="icon-bar">
+      <a href="#"><a button id="mute"><i class = "fas fa-microphone"></i></a>
+      <a href="#"><a button id="camera"><i class = "fas fa-video"></i></a> 
+  </div>
     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPbQEVoDbtKdOeB_T5nrHuztlSvVeGJQGxz1pyAUTWEumAc87Ctky8HplMrjIE9Kn0XybEiF9_4bJi/embed?start=false&loop=false&delayms=3000" id="myframe" frameborder="0" width="530" height="320" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     </div>
   </body>
