--- a/public/8_party.html
+++ b/public/8_party.html
@@ -38,9 +38,11 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
-      <button id="mute">Mute</button>
-      <button id="camera">Turn Camera Off</button>
     </div>
+    <div class="icon-bar">
+      <a href="#"><a button id="mute"><i class = "fas fa-microphone"></i></a>
+      <a href="#"><a button id="camera"><i class = "fas fa-video"></i></a> 
+  </div>
     <div id=bar>
     <iframe width="300" height="220" src="https://www.youtube.com/embed/_sI_Ps7JSEk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
