--- a/public/9_refreshroom.html
+++ b/public/9_refreshroom.html
@@ -39,8 +39,6 @@
         <li><a href="8_party.html"><i class="fas fa-wine-glass"></i>Party time</a></li>
         <li><a href="9_refreshroom.html"><i class="fas fa-umbrella-beach"></i>Refreshroom : Feedback</a></li>
       </ul>
-      <button id="mute">Mute</button>
-      <button id="camera">Turn Camera Off</button>
     </div>
     <!-- <div id=miro2>
       <iframe width="400" height="300" src="https://miro.com/app/live-embed/o9J_lTE-Dxc=/?moveToViewport=-844,896,1368,661" frameBorder="0" scrolling="no" allowFullScreen></iframe>
@@ -48,6 +46,10 @@
     <div id=google>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdYiG1-jPMORMtiOOWQQYOOj8tlWzJ7ykymtcIILtv7kv3wlw/viewform?embedded=true" width="400" height="300" frameborder="0" marginheight="0" marginwidth="0">로드 중…</iframe>
     </div>   -->
+    <div class="icon-bar">
+      <a href="#"><a button id="mute"><i class = "fas fa-microphone"></i></a>
+      <a href="#"><a button id="camera"><i class = "fas fa-video"></i></a> 
+  </div>
   </body>
   <script src="js/home/9_refreshroom.js"></script>
 </html>
